# rust-dortmund-website

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  index-256158138aa737a5.css  index.html  index.scss  prcheck.local.sh  test.js
.github/workflows/: main_deploy.yml  pr_check.yml  pr_preview.yml  pr_quality_checks.yml
backend/example/: Cargo.toml
backend/example/src/: main.rs
frontend-yew/: Cargo.toml  Trunk.toml  index.html  index.scss
frontend-yew/src/: app.rs  events.rs  main.rs  nav.rs
frontend-yew/src/components/: auth.rs  events.rs  home.rs  secure.rs  showcase.rs
main/: RustDortmundMeetupPage-cabdbc87d7d8b0d8.js  RustDortmundMeetupPage-cabdbc87d7d8b0d8_bg.wasm  RustDortmundMeetupPage-ec6f3a2ae1cabda2_bg.wasm  index.html
pr-preview/pr-5/: RustDortmundMeetupPage-275fadf7234f4f13.js  RustDortmundMeetupPage-275fadf7234f4f13_bg.wasm  index.html
pr-preview/pr-6/: RustDortmundMeetupPage-44d5f364e5d6664c.js  RustDortmundMeetupPage-44d5f364e5d6664c_bg.wasm  index.html
pr-preview/pr-7/: RustDortmundMeetupPage-ac70bc3fe829b9c9.js  RustDortmundMeetupPage-ac70bc3fe829b9c9_bg.wasm  index-fb380cdfb6441892.css  index.html
src/: app.rs  events.rs  main.rs  models.rs  news.rs
src/components/: auth.rs  events.rs  events_list.rs  home.rs  secure.rs  showcase.rs  upcoming.rs
static/: menu.js
