[workspace]
members = ["frontend-yew", "backend/example"]
default-members = ["backend/example"]
resolver = "3"

[workspace.package]
name = "Rust-Dortmund-Website"
version = "0.1.0"
edition = "2024"
authors = ["Tim Janus <tim@rust-dortmund.de>, Jan Vaorin <jan@rust-dortmund.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
