[workspace]
members = ["frontend-yew"]
default-members = ["frontend-yew"]
resolver = "3"

[workspace.package]
name = "Rust-Dortmund-Website"
version = "0.1.0"
edition = "2024"
authors = ["Tim Janus <tim@rust-dortmund.de>, Jan Vaorin <jan@rust-dortmund.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
