[package]
name = "RustDortmundMeetupPage"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description = "Rust Dortmund Meetup Page using Yew and Trunk"

[features]
default = ["auth"]
auth = []

[dependencies]
chrono.workspace = true
gloo.workspace = true
gloo-net.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
wasm-bindgen-futures.workspace = true
yew.workspace = true
yewdux.workspace = true
yew-oauth2.workspace = true
yew-router.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html